Fix sidebars superposition on small screens

--- a/contribs/gmf/examples/style/mobileapp-nav.less
+++ b/contribs/gmf/examples/style/mobileapp-nav.less
@@ -42,6 +42,14 @@ main {
 
 @nav-bar-height: 50px;
 
+.nav-left-is-visible nav.nav-right {
+  display: none;
+}
+
+.nav-right-is-visible nav.nav-left {
+  display: none;
+}
+
 nav.nav-left,
 nav.nav-right {
   position: fixed;
